# kdb-parquet

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  comparison.q  compile_commands.json  here  installation.md  k4unit_old.q  t  t.csv  table.md  vcpkg.json
Kdb-Apache-Files/: test_file1.csv
Python/: .converter_new.q.swp  all_types.py  converter.q  converter_new.q  create_csv.py  create_parquet_demo.py  csv_to_parquet.py  null_parquet.py  read_parquet_demo.py  time_read.q  time_write.p  timewrite.py
docs/: csv_to_parquet.txt  links.txt  null_py.txt  python_instructions.txt  testing procedure.txt  testing_procedure.txt
include/: config.h  library.h
include/spdlog/: spdlog.h
k4unit/: .master.q.swp  .sample.csv.swp  :here  Date.parquet  a.csv  bigtable  eeee  embedread.q  k4tests.csv  master.q  python_setup.q  smallchunkbigtable  tab.parquet  test_data.q  there  time32.parquet  timetab.parquet
k4unit/perf4/: cache.csv  comm.csv  file0.csv  file1.csv  fn.csv  mem.csv  plus0.csv  plus1.csv  sp.csv
k4unit/unit/: .readwrite_v2.csv.swp  blank.csv  chunked.csv  generic.csv  getfile.csv  getfile_old.csv  getfilebycols.csv  getfilebyrow.csv  getschema.csv  memory_leak.csv  pqerror_checks.csv  pqspecs.csv  pqtests1.csv  pqtests_orig.csv  readwrite.csv  readwrite_v2.csv  setfile.csv  streamread.csv  temporalcheck.csv  timeconvert.csv
q/: .test2.q.swp  comparison.q  examples.q  nyccomparison.q  streamexample.q  test.q  test2.q
rawlibs/arrow-apache-arrow-2.0.0/cpp/: CMakeLists.txt  arrow_bundled_dependencies.ar  arrow_bundled_dependencies.ar.in  cmake_summary.json
rawlibs/arrow-apache-arrow-2.0.0/cpp/boost_ep-prefix/src/boost_ep/: b2  project-config.jam
rawlibs/arrow-apache-arrow-2.0.0/cpp/boost_ep-prefix/src/boost_ep-stamp/: boost_ep-build-DEBUG.cmake  boost_ep-build-RELEASE.cmake  boost_ep-configure-DEBUG.cmake  boost_ep-download-DEBUG-impl.cmake  boost_ep-download-DEBUG.cmake  boost_ep-download-RELEASE.cmake  boost_ep-urlinfo.txt  download-boost_ep.cmake  extract-boost_ep.cmake
rawlibs/arrow-apache-arrow-2.0.0/cpp/boost_ep-prefix/tmp/: boost_ep-cfgcmd.txt
rawlibs/arrow-apache-arrow-2.0.0/cpp/examples/parquet/parquet-arrow/: myout
rawlibs/arrow-apache-arrow-2.0.0/cpp/jemalloc_ep-prefix/src/jemalloc_ep-stamp/: download-jemalloc_ep.cmake  extract-jemalloc_ep.cmake  jemalloc_ep-build-RELEASE.cmake  jemalloc_ep-configure-DEBUG.cmake  jemalloc_ep-download-DEBUG.cmake  jemalloc_ep-download-RELEASE-impl.cmake  jemalloc_ep-download-RELEASE.cmake  jemalloc_ep-install-RELEASE.cmake
rawlibs/arrow-apache-arrow-2.0.0/cpp/jemalloc_ep-prefix/tmp/: jemalloc_ep-cfgcmd.txt
rawlibs/arrow-apache-arrow-2.0.0/cpp/lz4_ep-prefix/src/lz4_ep-stamp/: download-lz4_ep.cmake  extract-lz4_ep.cmake  lz4_ep-build-RELEASE.cmake  lz4_ep-download-DEBUG.cmake  lz4_ep-download-RELEASE-impl.cmake  lz4_ep-download-RELEASE.cmake  lz4_ep-urlinfo.txt
rawlibs/arrow-apache-arrow-2.0.0/cpp/orc_ep-install/include/orc/: orc-config.hh
rawlibs/arrow-apache-arrow-2.0.0/cpp/orc_ep-prefix/src/orc_ep/: appveyor.yml
rawlibs/arrow-apache-arrow-2.0.0/cpp/orc_ep-prefix/src/orc_ep-stamp/: download-orc_ep.cmake  extract-orc_ep.cmake  orc_ep-build-RELEASE.cmake  orc_ep-configure-DEBUG.cmake  orc_ep-configure-RELEASE.cmake  orc_ep-download-DEBUG-impl.cmake  orc_ep-download-DEBUG.cmake  orc_ep-download-RELEASE.cmake  orc_ep-install-RELEASE.cmake  orc_ep-urlinfo.txt
rawlibs/arrow-apache-arrow-2.0.0/cpp/orc_ep-prefix/tmp/: orc_ep-cfgcmd.txt
rawlibs/arrow-apache-arrow-2.0.0/cpp/protobuf_ep-install/lib/pkgconfig/: protobuf-lite.pc
rawlibs/arrow-apache-arrow-2.0.0/cpp/protobuf_ep-prefix/src/protobuf_ep/: configure
rawlibs/arrow-apache-arrow-2.0.0/cpp/protobuf_ep-prefix/src/protobuf_ep-stamp/: download-protobuf_ep.cmake  extract-protobuf_ep.cmake  protobuf_ep-build-RELEASE.cmake  protobuf_ep-configure-DEBUG.cmake  protobuf_ep-configure-RELEASE.cmake  protobuf_ep-download-DEBUG.cmake  protobuf_ep-download-RELEASE-impl.cmake  protobuf_ep-download-RELEASE.cmake  protobuf_ep-install-DEBUG.cmake  protobuf_ep-urlinfo.txt
rawlibs/arrow-apache-arrow-2.0.0/cpp/protobuf_ep-prefix/tmp/: protobuf_ep-cfgcmd.txt
rawlibs/arrow-apache-arrow-2.0.0/cpp/snappy_ep-prefix/src/snappy_ep-stamp/: download-snappy_ep.cmake  extract-snappy_ep.cmake  snappy_ep-build-DEBUG.cmake  snappy_ep-configure-DEBUG.cmake  snappy_ep-configure-RELEASE.cmake  snappy_ep-download-DEBUG-impl.cmake  snappy_ep-download-DEBUG.cmake  snappy_ep-download-RELEASE.cmake  snappy_ep-install-DEBUG.cmake  (+1 more)
rawlibs/arrow-apache-arrow-2.0.0/cpp/snappy_ep-prefix/tmp/: snappy_ep-cfgcmd.txt
rawlibs/arrow-apache-arrow-2.0.0/cpp/src/: arrow_bundled_dependencies.ar  arrow_bundled_dependencies.ar.in  cmake_summary.json
rawlibs/arrow-apache-arrow-2.0.0/cpp/src/arrow/: ArrowConfig.cmake  ArrowOptions.cmake  arrow.pc  status.h
rawlibs/arrow-apache-arrow-2.0.0/cpp/src/parquet/: ParquetConfig.cmake  parquet.pc
rawlibs/arrow-apache-arrow-2.0.0/cpp/thrift_ep-prefix/tmp/: thrift_ep-cfgcmd.txt
rawlibs/arrow-apache-arrow-2.0.0/cpp/utf8proc_ep-prefix/tmp/: utf8proc_ep-cfgcmd.txt
rawlibs/arrow-apache-arrow-2.0.0/cpp/zstd_ep-prefix/tmp/: zstd_ep-cfgcmd.txt
rawlibs/arrow-apache-arrow-2.0.0/dev/benchmarking/examples/: benchmark_run_example.csv
src/: base.hpp  fromkdbtoarrow.hpp  library.cpp  reader-writer.cc  tokdbfromarrow.hpp  tokdbfromparquet.hpp
tests/testdata/: .d  Date.parquet  Time32.parquet  Time64.parquet  Timestamp.parquet  Timestamp_micro.parquet  all_types.parquet  benchmarktab  benchmarktab.parquet  big_table.parquet  demo.parquet  demo2.parquet  embedread.q  info.txt  many_types.parquet  mydata.parquet  null.csv  null.parquet  out-test2.parquet  parquet1.parquet  pqfalse  simple_example.parquet  simple_example.txt  simple_example_with_schema.parquet  temporal.parquet  test2.parquet  test_file2.csv  test_file3.csv  thousand_rows.parquet  thousand_rows_no_bool.parquet  time32python.parquet  timer.parquet  timestamp_ms_tz.parquet  timestamp_ns.parquet  timestamp_ns_tz.parquet  timestamp_us_tz.parquet
(+84 files in other folders)
